--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask
-faiss-cpu
-sentence-transformers
-torch
-groq
-gunicorn
+flask==3.0.2
+flask_caching==2.1.0
+faiss-cpu==1.7.4
+sentence-transformers==2.6.1
+torch==2.2.1
+groq==0.18.0
+tenacity==8.2.3
+numpy==1.24.3
+protobuf==3.20.0
+pillow==10.2.0
+cachelib==0.9.0  # Explicitly added
