--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.0.2
 faiss-cpu==1.7.4
 sentence-transformers==2.6.1
-torch==2.2.1+cpu
+torch==2.2.1
 groq==0.18.0
 numpy==1.24.3
 protobuf==3.20.0
